# SoundFinder

./: .gitignore  LICENSE.txt  README.md  SoundFinder.py  requirements.txt  setup.cfg
src/mypackage/: __main__.py
src/soundfinder/: run.py
tests/: test.py
