[metadata]
name = soundfinder
version = 0.0.1
description = Program that finds similar Spotify songs to a desired input song
long_description = file: README.md

[options]
package_dir=
    =src
packages=find:
install_requires=
    pandas
    spotipy
    python-dotenv

[options.packages.find]
where=src

[options.entry_points]
console_scripts = 
    soundfinder = soundfinder.run:main

[options.extras_require]
dev =
    pytest
    flake8
    
[flake8]
ignore = W191,E221,E272,E128
exclude = .git,.tox,__pycache__,tests/data,venv,venv36,venv37,venv38
max-complexity = 10
max-line-length = 127
count = True
statistics = True